Source/WebCore/platform/graphics/TiledBackingStore.h
@@ -72,7 +72,6 @@ public:
     Tile::Coordinate tileCoordinateForPoint(const IntPoint&) const;
     double tileDistance(const IntRect& viewport, const Tile::Coordinate&) const;
 
-    IntRect rect() const { return m_rect; }
     IntRect coverRect() const { return m_coverRect; }
     bool visibleAreaIsCovered() const;
     void removeAllNonVisibleTiles();
