Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedBackingStore.cpp
@@ -101,7 +101,7 @@ PassRefPtr<BitmapTexture> CoordinatedBackingStore::texture() const
     return PassRefPtr<BitmapTexture>();
 }
 
-void CoordinatedBackingStore::setSize(const WebCore::IntSize& size)
+void CoordinatedBackingStore::setSize(const WebCore::FloatSize& size)
 {
     m_size = size;
 }
@@ -112,15 +112,6 @@ static bool shouldShowTileDebugVisuals()
     return (qgetenv("QT_WEBKIT_SHOW_COMPOSITING_DEBUG_VISUALS") == "1");
 #endif
     return false;
-}
-
-// This function is copied from TiledBackingStore::mapToContents().
-static IntRect mapToContents(const IntRect& rect, float scale)
-{
-    return enclosingIntRect(FloatRect(rect.x() / scale,
-        rect.y() / scale,
-        rect.width() / scale,
-        rect.height() / scale));
 }
 
 void CoordinatedBackingStore::paintTilesToTextureMapper(Vector<TextureMapperTile*>& tiles, TextureMapper* textureMapper, const TransformationMatrix& transform, float opacity, BitmapTexture* mask, const FloatRect& rect)
@@ -165,7 +156,7 @@ void CoordinatedBackingStore::paintToTextureMapper(TextureMapper* textureMapper,
     }
 
     ASSERT(!m_size.isZero());
-    FloatRect rectOnContents = mapToContents(IntRect(IntPoint::zero(), m_size), m_scale);
+    FloatRect rectOnContents(FloatPoint::zero(), m_size);
     TransformationMatrix adjustedTransform = transform;
     // targetRect is on the contents coordinate system, so we must compare two rects on the contents coordinate system.
     // See TiledBackingStore.
